# ai-engineer-training

./: .gitignore  README.md  example_huawei_swr.py  index.html  main.py  package-lock.json  package.json  requirements.txt  setup.py  test_huawei_swr.py  test_parse.py  test_python.py
docker_tool/: __init__.py  deployer.py  image_packer.py  registry.py  ssh_client.py
project-doc/: SDK架构图.drawio  微服务系统架构图.drawio  系统部署架构图.pptx
src/: App.jsx  index.css
src/components/: ReportView.jsx
src/hooks/: useMockStream.js
week03-homework/: main.py  pyproject.toml
week03-homework/chunking_research/: main.py
week03-homework/data/: 容器网络技术原理.docx
