[project]
name = "week03-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "llama-index>=0.14.3",
    "llama-index-core>=0.14.3",
    "llama-index-embeddings-dashscope>=0.4.1",
    "llama-index-llms-dashscope>=0.5.1",
    "llama-index-llms-openai-like>=0.5.1",
]
